cbits/Bullet.h

void btSoftBody_Joint_Prepare(void *c,float p0,int p1); //method: Prepare void ( ::btSoftBody::Joint::* )( ::btScalar,int ) 
// attribute not supported: //attribute: ::btSoftBody::Body[2] btSoftBody_Joint->m_bodies
// attribute not supported: //attribute: ::btVector3[2] btSoftBody_Joint->m_refs
void btSoftBody_Joint_m_cfm_set(void *c,float a); //attribute: ::btScalar btSoftBody_Joint->m_cfm
float btSoftBody_Joint_m_cfm_get(void *c); //attribute: ::btScalar btSoftBody_Joint->m_cfm
void btSoftBody_Joint_m_erp_set(void *c,float a); //attribute: ::btScalar btSoftBody_Joint->m_erp
float btSoftBody_Joint_m_erp_get(void *c); //attribute: ::btScalar btSoftBody_Joint->m_erp
void btSoftBody_Joint_m_split_set(void *c,float a); //attribute: ::btScalar btSoftBody_Joint->m_split
float btSoftBody_Joint_m_split_get(void *c); //attribute: ::btScalar btSoftBody_Joint->m_split
void btSoftBody_Joint_m_drift_set(void *c,float* a); //attribute: ::btVector3 btSoftBody_Joint->m_drift
void btSoftBody_Joint_m_drift_get(void *c,float* a);
void btSoftBody_Joint_m_sdrift_set(void *c,float* a); //attribute: ::btVector3 btSoftBody_Joint->m_sdrift
void btSoftBody_Joint_m_sdrift_get(void *c,float* a);
void btSoftBody_Joint_m_massmatrix_set(void *c,float* a); //attribute: ::btMatrix3x3 btSoftBody_Joint->m_massmatrix
void btSoftBody_Joint_m_massmatrix_get(void *c,float* a);
void btSoftBody_Joint_m_delete_set(void *c,int a); //attribute: bool btSoftBody_Joint->m_delete
int btSoftBody_Joint_m_delete_get(void *c); //attribute: bool btSoftBody_Joint->m_delete
void* btSoftBody_LJoint_new(); //constructor: LJoint  ( ::btSoftBody::LJoint::* )(  ) 
void btSoftBody_LJoint_free(void *c);
 
void btSoftBody_LJoint_Terminate(void *c,float p0); //method: Terminate void ( ::btSoftBody::LJoint::* )( ::btScalar ) 
//not supported method: Type ::btSoftBody::Joint::eType::_ ( ::btSoftBody::LJoint::* )(  ) const
// error:  - unsupported

void btSoftBody_LJoint_Solve(void *c,float p0,float p1); //method: Solve void ( ::btSoftBody::LJoint::* )( ::btScalar,::btScalar ) 
void btSoftBody_LJoint_Prepare(void *c,float p0,int p1); //method: Prepare void ( ::btSoftBody::LJoint::* )( ::btScalar,int ) 
// attribute not supported: //attribute: ::btVector3[2] btSoftBody_LJoint->m_rpos
void* btSoftBody_Link_new(); //constructor: Link  ( ::btSoftBody::Link::* )(  ) 
void btSoftBody_Link_free(void *c);
 
// attribute not supported: //attribute: ::btSoftBody::Node *[2] btSoftBody_Link->m_n
void btSoftBody_Link_m_rl_set(void *c,float a); //attribute: ::btScalar btSoftBody_Link->m_rl
float btSoftBody_Link_m_rl_get(void *c); //attribute: ::btScalar btSoftBody_Link->m_rl
void btSoftBody_Link_m_bbending_set(void *c,int a); //attribute: int btSoftBody_Link->m_bbending
int btSoftBody_Link_m_bbending_get(void *c); //attribute: int btSoftBody_Link->m_bbending
void btSoftBody_Link_m_c0_set(void *c,float a); //attribute: ::btScalar btSoftBody_Link->m_c0
float btSoftBody_Link_m_c0_get(void *c); //attribute: ::btScalar btSoftBody_Link->m_c0
void btSoftBody_Link_m_c1_set(void *c,float a); //attribute: ::btScalar btSoftBody_Link->m_c1
float btSoftBody_Link_m_c1_get(void *c); //attribute: ::btScalar btSoftBody_Link->m_c1
void btSoftBody_Link_m_c2_set(void *c,float a); //attribute: ::btScalar btSoftBody_Link->m_c2
float btSoftBody_Link_m_c2_get(void *c); //attribute: ::btScalar btSoftBody_Link->m_c2
void btSoftBody_Link_m_c3_set(void *c,float* a); //attribute: ::btVector3 btSoftBody_Link->m_c3
void btSoftBody_Link_m_c3_get(void *c,float* a);
void* btSoftBody_Material_new(); //constructor: Material  ( ::btSoftBody::Material::* )(  ) 
void btSoftBody_Material_free(void *c);
 
void btSoftBody_Material_m_flags_set(void *c,int a); //attribute: int btSoftBody_Material->m_flags
int btSoftBody_Material_m_flags_get(void *c); //attribute: int btSoftBody_Material->m_flags
void btSoftBody_Material_m_kAST_set(void *c,float a); //attribute: ::btScalar btSoftBody_Material->m_kAST